--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "handlebars": "^4.7.8",
     "hbs": "^4.2.0",
     "puppeteer": "^24.9.0",
     "reflect-metadata": "^0.2.2",
@@ -37,6 +38,8 @@
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
     "@types/express": "^5.0.0",
+    "@types/handlebars": "^4.0.40",
+    "@types/hbs": "^4.0.4",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
